Making it work with firefox as well

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -59,10 +59,10 @@
 	background-position: 0px 0px;
 	background-repeat: repeat-x;
 
-	-webkit-animation: animatedBackground 2s linear infinite;
+	animation: animatedBackground 2s linear infinite;
 }
 
-@-webkit-keyframes animatedBackground {
+@keyframes animatedBackground {
 	from { background-position: 100% 0; }
 	to { background-position: 0% 0; }
 }
@@ -110,5 +110,5 @@ body {
 	background-image: url("../images/background2.png");
 	background-position: 0px 0px;
 	background-repeat: repeat-x;
-	-webkit-animation: animatedBackground 7s linear infinite;
+	animation: animatedBackground 7s linear infinite;
 }
