Player rotates in his direction

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,7 +6,7 @@
 	height: 5em;
 	background-image: url("../images/mario-sprite.png");
 	background-size: 300%;
-	transform: translateZ(0) rotation(0);
+	transform: translateZ(0);
 	-moz-animation: spriteAnimation .5s steps(3) infinite alternate;
 	-webkit-animation: spriteAnimation .5s steps(3) infinite alternate;
 }
