--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,6 +41,7 @@
 
 .Pipeupper {
 	background-image: url("../images/pipeUpper.png");
+	background-position: left bottom;
 	background-size: 100%;
 }
 
