--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -150,6 +150,15 @@ body {
 	top: 0.5em;
 }
 
+.introText {
+	position: absolute;
+	font-size: 3em;
+	font-family: 'Press Start 2P', cursive;
+	color: white;
+	left: 5%;
+	top: 3em;
+}
+
 .Scoreboard .counter {
 	top: 2em;
 }
