--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -86,13 +86,13 @@
 	animation: groundAnimation 0.09s linear infinite;
 }
 
+@-webkit-keyframes groundAnimation {
+	from { transform: translateX(0); }
+	to { transform: translateX(-2.7em); }
+}
 @keyframes groundAnimation {
-	from {
-		transform: translateX(0);
-	}
-	to {
-		transform: translateX(-2.7em);
-	}
+	from { transform: translateX(0); }
+	to { transform: translateX(-2.7em); }
 }
 
 @-webkit-keyframes animatedBackground {
@@ -134,6 +134,15 @@ body {
 	color: #000;
 	padding: 0.2em 0;
 }
+
+.background {
+	width:120%;
+	height: 57.6em;
+	background-image: url("../images/background2.png");
+	background-repeat: repeat-x;
+
+}
+
 .GameCanvas {
 	font-size: 10px;
 	position: absolute;
