--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Press Start 2P', cursive;
+}
+
 .Player {
 	position: absolute;
 	top: 0;
@@ -109,7 +113,7 @@
 }
 
 .Scoreboard-restart {
-	margin-top: 20em;
+	margin-top: 22em;
 	font-size: inherit;
 	padding: 0.4em 1.5em;
 	border: 0.2em solid white;
@@ -117,8 +121,8 @@
 	cursor: pointer;
 }
 .Scoreboard-restartText {
-	font-family: 'Press Start 2P', cursive;
 	font-size: 2.4em;
+	font-family: 'Press Start 2P', cursive;
 	color: white;
 }
 body {
@@ -172,7 +176,6 @@ body {
 .counter {
 	position: absolute;
 	font-size: 5em;
-	font-family: 'Press Start 2P', cursive;
 	color: white;
 	left: 45%;
 	top: 0.5em;
@@ -181,7 +184,6 @@ body {
 .introText {
 	position: absolute;
 	font-size: 3em;
-	font-family: 'Press Start 2P', cursive;
 	color: white;
 	left: 5%;
 	top: 3em;
@@ -189,6 +191,7 @@ body {
 
 .Scoreboard .counter {
 	top: 2em;
+	font-family: 'Press Start 2P', cursive;
 	font-size: 3em;
 }
 
@@ -212,4 +215,37 @@ body {
 
 .Scoreboard .topScoreText {
 	top: 4.5em;
+}
+
+.button {
+	background: none;
+	font-family: 'Press Start 2P', cursive;
+	font-size: 2em;
+	height: 2em;
+	border: 0;
+	top: 1.5em;
+	color: #ffffff;
+}
+
+.button > .icon {
+	background-image: url("../images/soundicon.png");
+	background-size: auto 100%;
+	height: 2em;
+	width: 2em;
+	border: none;
+	margin-left: 0.5em;
+}
+
+.button.muted > .icon {
+	background-position: right;
+}
+
+#muteSong {
+	position: absolute;
+	right: 10em;
+}
+
+#muteSoundEffects {
+	position: absolute;
+	right: 2em;
 }
